Fixing some padding on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -147,6 +147,7 @@ body {
     display: inline-block;
     transition: .5s ease;
     backface-visibility: hidden;
+
 }
 
 .middle {
@@ -194,6 +195,7 @@ body {
         width: 100px;
         height: 100px;
         display: inline-block;
+        margin-bottom: 50px;
     }
 
     h2 {
